# regulatory-rule-engine

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LEARNINGS.md  README.md  nginx.conf
.devcontainer/: devcontainer.json
.github/workflows/: cd-production.yml  cd-staging.yml  contract-tests.yml  frontend-ci.yml  rust-ci.yml  wasm-build.yml
crates-deferred/: README.md
crates/ke-artifact/: Cargo.toml  pyproject.toml
crates/ke-artifact/examples/: contract-verify.rs  emit-contract-inputs.rs
crates/ke-artifact/src/: artifact.rs  attestation.rs  consistency.rs  hash.rs  keydir.rs  lib.rs  python.rs  sign.rs  tsa.rs  verify.rs
crates/ke-artifact/tests/: attestation.rs  golden.rs  hash_offset.rs  kind_payload_agreement.rs  non_canonical.rs  sign.rs  verify_surface.rs
crates/ke-cli/: Cargo.toml
crates/ke-cli/src/: cli.rs  lib.rs  main.rs  policy.rs
crates/ke-cli/src/commands/: attest.rs  compile.rs  deprecate.rs  export.rs  export_provenance.rs  graph_export.rs  import_kew.rs  lint.rs  ml_check.rs  mod.rs  publish.rs  query.rs  revoke.rs  rollback.rs  sql.rs
crates/ke-cli/src/graph/: mod.rs
crates/ke-cli/src/registry/: backend.rs  event.rs  mod.rs
crates/ke-cli/src/serve/: dto.rs  handlers.rs  mod.rs  router.rs
crates/ke-cli/tests/: export_import.rs  export_provenance.rs  graph_export.rs  lifecycle.rs  lint.rs  registry.rs  revocation_reason_class.rs  serve.rs  sql_views.rs
crates/ke-cli/tests/fixtures/graph/: regime_a.yaml  regime_b.yaml
crates/ke-compiler/: Cargo.toml
crates/ke-compiler/src/: error.rs  lib.rs  lower.rs  parser.rs  python_import.rs  value.rs
crates/ke-compiler/src/ast/: mod.rs  span.rs
crates/ke-compiler/src/verify/: conflict.rs  mod.rs  t0.rs  t1.rs  t4.rs  t5.rs
crates/ke-compiler/tests/: lowering.rs  parser_spans.rs  python_import.rs  t4_conflicts.rs  t4_corpus.rs  verify_t0_t1.rs
crates/ke-compiler/tests/fixtures/conflicts/: contradictory.yaml  duplicate.yaml  overlapping_scope.yaml  temporal_overlap.yaml
crates/ke-core/: Cargo.toml
crates/ke-core/schema/: ir.schema.json
crates/ke-core/src/: examples.rs  lib.rs  manifest.rs  revocation.rs  version.rs
crates/ke-core/src/canonical/: decode.rs  encode.rs  mod.rs  ordering.rs
crates/ke-core/src/ir/: check.rs  condition.rs  decision.rs  intent.rs  mod.rs  obligation.rs  rule.rs  source_span.rs  time.rs
crates/ke-core/src/schema/: defs.rs  emit.rs  mod.rs
crates/ke-core/src/semantic/: diff.rs  form.rs  mod.rs
crates/ke-core/tests/: artifact_hash_offset.rs  non_canonical.rs  revocation_decision.rs  round_trip.rs  schema_determinism.rs
crates/ke-runtime/: Cargo.toml
crates/ke-runtime/src/: compare.rs  effective.rs  exec.rs  lib.rs  scenario.rs  trace.rs  value.rs
crates/ke-runtime/tests/: metamorphic.rs  property.rs  trace_fixtures.rs
crates/ke-wasm/: Cargo.toml  package.json
crates/ke-wasm/src/: lib.rs
crates/ke-wasm/tests/: parity.rs
dev/briefs/: compass-live-verify-consumer-seed.md  gate-2-parser-compiler-verification.md  gate-3-preview-runtime.md  gate-4-artifact-registry-attestation.md  gate-4-platform-consumption-OUTLINE.md  gate-4-platform-consumption.md  gate-6-plan-and-next-session-seed.md  npm-publish-atlas-artifact-decision.md  payments-port-feasibility-and-corrections.md
docs/: DEVELOPMENT.md  Local Kubernetes Development.md  README.md  STATUS.md  SYSTEM.md  attestation-schema.md  canonical-encoding.md  consumer-serve-contract.md  dsl-gap-review-gate-2.md  gate-1-canonical-ir.md  gate-1-implementation-log.md  gate-2-implementation-log.md  gate-3-implementation-log.md  gate-4-acceptance.md  gate-4-implementation-log.md  gate-5-implementation-log.md  gate-6-implementation-log.md  publish-atlas-artifact.md
docs/adr/: 0001-jurisdiction-time-zone.md  0002-canonical-codec-postcard.md  0003-decimal-scalar-representation.md  0004-source-span-coverage-policy.md  0005-t4-conflict-classes-gate-2.md  0006-effective-window-optional.md  0007-effective-window-preview-runtime.md  0008-execution-equivalence-boundary.md  0009-expert-key-authority-and-revocation.md  0010-trusted-timestamp-authority.md  0011-t2t3-publication-policy-and-sidecar-deployment.md  0012-s3-registry-and-pep503-index-layout.md  0013-revocation-policy-reconciliation.md  0014-audit-contract-ownership.md  0015-temporal-orchestration-ownership.md  0016-phase4-consumer-agnostic-verification.md  0017-gate5-sequencing-atlas-surfaces-independent.md  0018-serve-transport-sse-and-non-authoritative-scope.md  0019-agent-identity-governance-framing-and-consumer-trust-boundary.md  0020-gate5-frontend-rewire-honest-acceptance.md  0021-intentspec-artifact-kind-polymorphic-payload.md  0022-intentspec-r7-coattestation.md  0023-graph-export-derived-view.md  0024-gate6-scope-reconciliation.md  0025-production-key-authority.md  README.md
docs/handoff/: 2026-07-21-corporate-pivot-substance-and-adr-0025.md  HANDOFF.md
docs/learnings/: 2026-07-21-adr-0009-two-open-items.md  2026-07-21-squash-merge-strands-postmerge-commits.md  2026-07-21-stable-volatile-is-reverification-semantics.md  2026-07-21-vop-not-an-authorization-gate.md  LEARNINGS.md
docs/spec/: ke-workbench-rust-migration-spec-v3.1.md
fixtures/: README.md
fixtures/artifacts/: GOLDEN.md  MANIFEST.md
fixtures/graph/: expected_edges.json
fixtures/rules/: SOURCE.md  fca_crypto.yaml  finma_dlt.yaml  genius_stablecoin.yaml  mas_psa.yaml  mica_authorization.yaml  mica_stablecoin.yaml  rwa_authorization.yaml  schema.yaml
fixtures/traces/: golden.json
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend-react/: vite.config.js
frontend-react/src/: App.tsx
frontend/e2e/: README.md  visual.spec.ts
frontend/src/: index.css  main.tsx  setupTests.ts  (+1 more)
scripts/: bootstrap.sh  contract-test.sh  differential-test.sh  equivalence-harness.sh  generate-golden-fixtures.sh  graph-differential.sh  lifecycle-smoke.sh  py_reference_runtime.py  registry-smoke.sh  serve-published-registry.sh
(+114 files in other folders)
