[workspace]
resolver = "2"
members = [
    "crates/ke-core",
    "crates/ke-compiler",
    "crates/ke-runtime",
    "crates/ke-artifact",
    "crates/ke-cli",
    "crates/ke-wasm",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Proprietary"
authors = ["ke-workbench contributors"]
publish = false

[workspace.dependencies]
# `default-features = false` drops clap's color/terminal stack (anstream ->
# anstyle-wincon -> windows-sys), which cannot build on this windows-gnu
# toolchain (broken self-contained dlltool; see MEMORY toolchain note). We keep
# the derive macro plus help/usage/error rendering — no color needed for a
# deterministic CLI.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
postcard = { version = "1", features = ["use-std"] }
blake3 = "1"
ed25519-dalek = "2"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
unicode-normalization = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
