[package]
name = "ke-artifact"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Canonical encoding, BLAKE3 content addressing, ed25519 signatures, and attestations"

[features]
default = []
# Enable PyO3 bindings used by ke-artifact-py (see spec § 14).
pyo3 = []

[dependencies]
ke-core = { path = "../ke-core" }
serde = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
