[package]
name = "ke-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "ke-workbench command-line: compile, verify, attest, publish, query, serve"

[features]
default = []
# Fixed-seed deterministic test keys for the compiler signature
# (`ke_artifact::sign::test_keys`) AND the registry-root key used to sign
# lifecycle events (`registry::event::test_keys`). Gate 4 Phase 3a:
# `ke compile` / `ke query` only *sign* artifacts and events under this
# feature, so the smoke script and the `ke` binary built for end-to-end runs
# must enable it. `cargo build -p ke-cli` (no features) stays clean: the
# registry-core types, `current_state`, `resolve`, and the precondition table
# are all ungated; only the signing entry points are gated. NEVER enable in
# production builds; every key here is loudly a fixed-seed test key and never
# an ADR-0009 production key. NEVER use OsRng/getrandom for keys.
test-keys = ["ke-artifact/test-keys"]

[lib]
name = "ke_cli"
path = "src/lib.rs"

[[bin]]
name = "ke"
path = "src/main.rs"

[dependencies]
ke-core = { path = "../ke-core" }
ke-compiler = { path = "../ke-compiler" }
ke-runtime = { path = "../ke-runtime" }
ke-artifact = { path = "../ke-artifact" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# `ke serve` (Gate 5): a thin, non-authoritative read/preview HTTP adapter over
# the existing pure functions. tiny_http is a sync, dependency-light HTTP/1.1
# server (thread-per-request) — no async, no tokio, no getrandom 0.3. The live
# feed is SSE over a long-lived text/event-stream response (see the spec
# deviation note in src/serve/mod.rs: WebSocket cannot build on this
# windows-gnu toolchain).
tiny_http = "0.12"

[dev-dependencies]
# Self-dependency so integration tests under tests/ see the gated test-key
# modules (`registry::event::test_keys`, `ke_artifact::sign::test_keys`):
# `cfg(test)` applies only to unit tests, not the lib/bin as compiled for the
# integration-test target. Feature unification enables `test-keys` for all
# test builds while `cargo build -p ke-cli` stays clean (mirrors ke-artifact).
ke-cli = { path = ".", features = ["test-keys"] }
