[package]
name = "ke-compiler"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "YAML parser, AST→IR lowering, and T0/T1/T4 verification passes"

[dependencies]
ke-core = { path = "../ke-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Span-tracking YAML parser (Gate 2). Values are parsed explicitly to avoid
# f64 coercion, so serde_yaml is intentionally not a dependency.
marked-yaml = "0.7"

[dev-dependencies]
serde_json = { workspace = true }

[[bin]]
name = "ke-compile"
path = "src/bin/ke-compile.rs"
