[package]
name = "ke-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "IR types, AST, semantic diff helpers, and canonicalization for ke-workbench"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
# Tests craft raw (non-canonicalized) bytes to exercise the strict decoder.
postcard = { workspace = true }

[[bin]]
name = "emit-schema"
path = "src/bin/emit-schema.rs"

[[bin]]
name = "gen-fixtures"
path = "src/bin/gen-fixtures.rs"
