[package]
name = "ke-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Preview executor and scenario/trace harness (preview-only; production uses Python RuleRuntime)"

[dependencies]
ke-core = { path = "../ke-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
