[package]
name = "ke-wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Browser-side preview compile + dry-run bindings (preview-only; cannot sign/publish)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ke-core = { path = "../ke-core" }
ke-compiler = { path = "../ke-compiler" }
ke-runtime = { path = "../ke-runtime" }
