[package]
name = "ke-wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Browser-side preview compile + dry-run + verify-only bindings (preview-only; cannot sign/publish)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ke-core = { path = "../ke-core" }
ke-compiler = { path = "../ke-compiler" }
ke-runtime = { path = "../ke-runtime" }
# Verify-only artifact surface (Gate 4 Phase 4b, ADR 0016). No signing path is
# reachable from WASM (spec § 6 WASM discipline).
ke-artifact = { path = "../ke-artifact" }
serde = { workspace = true }
serde_json = { workspace = true }
# PINNED: the wasm-bindgen CRATE version and the installed wasm-bindgen-cli
# version MUST MATCH EXACTLY (classic footgun). The next agent runs
# `cargo install wasm-bindgen-cli --version 0.2.95` to match this pin.
wasm-bindgen = "=0.2.95"
